crates/oxc_react_compiler/tests/snapshots/use-memo-noemit.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/use-memo-noemit.js
---
No changes.
