crates/oxc_react_compiler/tests/snapshots/use-memo-simple.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/use-memo-simple.js
---
import { c as _c } from "react/compiler-runtime";
function Component(props) {
	"use memo";
	const $ = _c(2);
	let t0;
	if ($[0] !== props.foo) {
		const x = [props.foo];
		t0 = <div x={x}>"foo"</div>;
		$[0] = props.foo;
		$[1] = t0;
	} else {
		t0 = $[1];
	}
	return t0;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{ foo: 1 }],
	isComponent: true
};
