crates/oxc_react_compiler/tests/snapshots/use-no-forget-module-level.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/use-no-forget-module-level.js
---
"use no forget";
export default function foo(x, y) {
	if (x) {
		return foo(false, y);
	}
	return [y * 10];
}
