crates/oxc_react_compiler/tests/snapshots/use-no-forget-multiple-with-eslint-suppression.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/use-no-forget-multiple-with-eslint-suppression.js
---
Diagnostics:

OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] Suppression: React Compiler has skipped optimizing this component because one or more React ESLint rules were disabled", labels: [LabeledSpan { label: Some("Found React rule suppression"), span: SourceSpan { offset: 176, length: 54 }, primary: false }], help: Some("React Compiler only works when your components follow all the rules of React, disabling them may result in unexpected or incorrect behavior. Found suppression `eslint-disable-next-line react-hooks/rules-of-hooks`"), note: None, severity: Error, code: OxcCode { scope: None, number: None }, url: None } }

import { useRef } from "react";
const useControllableState = (options) => {};
function NoopComponent() {}
function Component() {
	"use no forget";
	const ref = useRef(null);
	ref.current = "bad";
	return <button ref={ref} />;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: []
};
