crates/oxc_react_compiler/tests/snapshots/use-no-forget-with-no-errors.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/use-no-forget-with-no-errors.js
---
No changes.
