crates/oxc_react_compiler/tests/snapshots/use-no-memo-module-level.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/use-no-memo-module-level.js
---
No changes.
