crates/oxc_react_compiler/tests/snapshots/use-no-memo-simple.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/use-no-memo-simple.js
---
// @expectNothingCompiled
function Component(props) {
	"use no memo";
	let x = [props.foo];
	return <div x={x}>"foo"</div>;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{ foo: 1 }],
	isComponent: true
};
