crates/oxc_react_compiler/tests/snapshots/use-operator-conditional.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/use-operator-conditional.js
---
import { c as _c } from "react/compiler-runtime";
import { ValidateMemoization } from "shared-runtime";
import { use, useMemo } from "react";
const FooContext = React.createContext(null);
function Component(props) {
	const $ = _c(5);
	let t0;
	if ($[0] !== props.cond) {
		t0 = <Inner cond={props.cond} />;
		$[0] = props.cond;
		$[1] = t0;
	} else {
		t0 = $[1];
	}
	let t1;
	if ($[2] !== props.value || $[3] !== t0) {
		t1 = <FooContext.Provider value={props.value}>{t0}</FooContext.Provider>;
		$[2] = props.value;
		$[3] = t0;
		$[4] = t1;
	} else {
		t1 = $[4];
	}
	return t1;
}
function Inner(props) {
	const $ = _c(7);
	let input = null;
	if (props.cond) {
		input = use(FooContext);
	}
	input;
	let t0;
	if ($[0] !== input) {
		t0 = [input];
		$[0] = input;
		$[1] = t0;
	} else {
		t0 = $[1];
	}
	const output = t0;
	let t1;
	if ($[2] !== input) {
		t1 = [input];
		$[2] = input;
		$[3] = t1;
	} else {
		t1 = $[3];
	}
	let t2;
	if ($[4] !== output || $[5] !== t1) {
		t2 = <ValidateMemoization inputs={t1} output={output} />;
		$[4] = output;
		$[5] = t1;
		$[6] = t2;
	} else {
		t2 = $[6];
	}
	return t2;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{
		cond: true,
		value: 42
	}],
	sequentialRenders: [
		{
			cond: true,
			value: 42
		},
		{
			cond: false,
			value: 42
		},
		{
			cond: false,
			value: null
		},
		{
			cond: false,
			value: 42
		},
		{
			cond: true,
			value: 42
		},
		{
			cond: false,
			value: 42
		},
		{
			cond: false,
			value: null
		},
		{
			cond: true,
			value: 42
		}
	]
};
